# fastapi-template

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: backend_pre_start.py  initial_data.json  initial_data.py  main.py  models.py  sqltypes.py
app/alembic/: env.py
app/alembic/versions/: 17315875f468_initial_migration.py
app/api/: base_model.py  deps.py  main.py
app/api/crud/: auth.py
app/api/routes/: auth.py
app/api/schemas/: auth.py
app/common/: enums.py
app/core/: config.py  db.py  security.py
app/tests/: conftest.py
app/tests/api/routes/: test_auth.py
app/utils/: helpers.py  logger.py
scripts/: compile.py  gunicorn_conf.py  prestart.sh  start-reload.sh  start.sh
